--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
                 <div class="col-12 mt-3">
                     <label for="ipList" class="form-label">
-                        <i class="fa-solid fa-network-wired"></i> IP Addresses List (one address per line)
+                        <i class="fa-solid fa-network-wired"></i> Addresses List (one address per line)
                     </label>
-                    <textarea id="ipList" class="form-control" rows="3" placeholder="Enter IP addresses, one per line"></textarea>
+                    <textarea id="ipList" class="form-control" rows="3" placeholder="Enter addresses, IP or domain"></textarea>
                 </div>
 
                 <button class="btn btn-primary w-100 mt-3" onclick="processJson()">
