--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON Modifier</title>
-
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
@@ -104,7 +102,12 @@ document.getElementById('fileInput').addEventListener('change', function(event) 
             const jsonString = e.target.result;
             jsonData = JSON.parse(jsonString);
             document.getElementById('jsonTextInput').value = JSON.stringify(jsonData, null, 4);
-            Swal.fire('Success', 'File loaded successfully!', 'success');
+            Swal.fire({
+                showConfirmButton: false,
+                timer: 2000,
+                icon: 'success',
+                title: 'File loaded successfully!'
+		        });
             console.log("Loaded JSON:", jsonData);
         } catch (error) {
             Swal.fire('Error', 'Invalid JSON file: ' + error.message, 'error');
@@ -181,7 +184,14 @@ function copyToClipboard() {
     const output = document.getElementById('output');
     output.select();
     document.execCommand('copy');
-    Swal.fire('Copied!', 'JSON copied to clipboard.', 'success');
+    Swal.fire({
+        toast: true,
+        position: 'top-end',
+        showConfirmButton: false,
+        timer: 1500,
+        icon: 'success',
+        title: 'Copied!'
+		});
 }
 
 function saveFile() {
@@ -191,7 +201,14 @@ function saveFile() {
     link.href = URL.createObjectURL(blob);
     link.download = "modified.json";
     link.click();
-    Swal.fire('Saved!', 'File saved as modified.json.', 'success');
+    Swal.fire({
+        toast: true,
+        position: 'top-end',
+        showConfirmButton: false,
+        timer: 1500,
+        icon: 'success',
+        title: 'saved as modified.json!'
+		});
 }
 
 </script>
